--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
   <h4>Axoluchin</h4>
   <ul class="flex">
     <li><a href="/">Portafolio</a></li>
-    <li><a href="/">Blog</a></li>
+    <li><a href="/blog">Blog</a></li>
     <li><a href="/">Videos</a></li>
   </ul>
 </header>
