--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,5 +1,5 @@
 <main class="cover">
-  <img alt="avatar" src="./avatar.png" class="avatar" />
+  <img alt="avatar" src="./images/avatar.png" class="avatar" />
   <div class="text">
     <p class="frase">
       Hola, soy Damián y
