--- a/src/components/Readme.astro
+++ b/src/components/Readme.astro
@@ -36,7 +36,7 @@
         <li class="orange">Nestjs</li>
       </ul>
     </div>
-    <img alt="Rocket" src="./Rocket.png" class="image" />
+    <img alt="Rocket" src="./images/Rocket.png" class="image" />
   </div>
 </article>
 
