--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,14 @@
 import Layout from "../layouts/Layout.astro";
 import Presentation from "../components/Presentation.astro";
 import Readme from '../components/Readme.astro';
+import Experience from "../components/Experience.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Damián Huchín">
   <div class="stars twinkling clouds"/>
     <Presentation />
     <Readme/>
+    <Experience/>
 </Layout>
 
 <style>
