--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import Header from '../components/Header.astro';
+import Header from "../components/Header.astro";
 
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -10,30 +10,74 @@ const { title } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{`${title} | Axoluchin`}</title>
-	</head>
-	<body>
-		<Header/>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <meta name="generator" content={Astro.generator} />
+    <title>{`${title} | Axoluchin`}</title>
+  </head>
+  <body>
+    <Header />
+    <div class="stars twinkling clouds"/>
+    <slot />
+  </body>
 </html>
 <style is:global>
-	html {
-		font-family: system-ui, sans-serif;
-		color: #F6F6F6;
-		background-color: rgb(9, 9, 9);
-	}
-	body {
-		max-width: 1100px;
-		margin: auto 
-	}
-	a {
-		color: #F6F6F6;
-		text-decoration: none;
-	}
+  html {
+    font-family: system-ui, sans-serif;
+    background-color: rgb(9, 9, 9);
+    color-scheme: dark;
+  }
+  body {
+    max-width: 1100px;
+    margin: auto;
+  }
+  a {
+    color: #f6f6f6;
+    text-decoration: none;
+  }
+  p {
+    font-size: 18px;
+  }
+
+  .stars,
+  .twinkling,
+  .clouds {
+    position: fixed;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100vh;
+  }
+
+  .stars {
+    z-index: -1;
+    background: #000 url("https://i.imgur.com/YKY28eT.png") repeat top;
+	animation: move-twink-back 1000s linear infinite;
+  }
+
+  @keyframes move-twink-back {
+    from {
+      background-position: 0 0;
+    }
+    to {
+      background-position: -10000px 5000px;
+    }
+  }
+
+  @keyframes move-clouds-back {
+    from {
+      background-position: 0 0;
+    }
+    to {
+      background-position: 10000px 0;
+    }
+  }
 </style>
