Better Mobile desing

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,8 @@
 <header>
   <div class="flex">
-    <h4>Axoluchin</h4>
+    <a href="/">
+      <h4>Axoluchin</h4>
+    </a>
     <ul class="flex list">
       <li><a href="/">Portafolio</a></li>
       <li><a href="/blog">Blog</a></li>
@@ -79,12 +81,12 @@
   ul {
     list-style: none;
   }
-  a {
+  li a {
     padding: 0.5rem 1rem;
     border-radius: 1rem;
     font-size: large;
   }
-  a:hover {
+  li a:hover {
     text-decoration: underline #9f64b2 3px;
   }
   .flex {
