--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,20 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Presentation from "../components/Presentation.astro";
-import Readme from '../components/Readme.astro';
+import Readme from "../components/Readme.astro";
 import Experience from "../components/Experience.astro";
 ---
 
 <Layout title="Damián Huchín">
+  <div>
     <Presentation />
-    <Readme/>
-    <Experience/>
+    <Readme />
+    <Experience />
+  </div>
 </Layout>
+
+<style>
+    div {
+      margin: 0% 1rem;
+    }
+</style>
