--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <header>
   <div class="flex">
     <a href="/">
-      <h4>Axoluchin</h4>
+      <h4>Damián</h4>
     </a>
     <ul class="flex list">
       <li><a href="/">Portafolio</a></li>
