--- a/src/components/Readme.astro
+++ b/src/components/Readme.astro
@@ -3,7 +3,7 @@
   <div class="flex">
     <div>
       <p>
-        Empece en 2021 desarrollando Apps con Javascript en React Native y Expo,
+        Empece desarrollando Apps con Javascript en React Native y Expo,
         en cuestion de meses cambie a Typescript para mejorar la calidad de
         codigo y de los proyectos, despues dando el salto a React con sus
         Frameworks como Vite y Next.js.
