--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -47,7 +47,11 @@ const works = [
 <article>
   <div>
     <h2>Experiencia ⭐</h2>
-    <p>Mas de 1 año de experiencia en desarollo</p>
+    <p>
+      Es los lugares donde he trabajado me ha tocado empezar proyectos desde
+      cero, dar mantenimiento y agregar nuevas funciones, todo enfocado a
+      producto y manteniendo un buen performance en los proyectos
+    </p>
   </div>
   <div class="works">
     {
@@ -77,7 +81,9 @@ const works = [
     margin-bottom: 5rem;
   }
   p {
-    font-size: large;
+    font-size: x-large;
+    width: 80%;
+    text-align: justify;
   }
   .works {
     display: flex;
@@ -91,6 +97,10 @@ const works = [
     }
     h2 {
       font-size: 38px;
+    }
+    p{
+      width: auto;
+      font-size: large;
     }
   }
 </style>
