--- a/src/components/Readme.astro
+++ b/src/components/Readme.astro
@@ -3,33 +3,36 @@
   <div class="flex">
     <div>
       <p>
-        Empece desarrollando Apps con Javascript en React Native y Expo,
-        en cuestion de meses cambie a Typescript para mejorar la calidad de
-        codigo y de los proyectos, despues dando el salto a React con sus
-        Frameworks como Vite y Next.js.
+        Empecé desarrollando Apps con Javascript en React Native y Expo, en
+        cuestión de meses cambie a Typescript para mejorar la calidad de código
+        y de los proyectos, después dando el salto a React con sus Frameworks
+        como Vite y Next.js.
         <br />
         Durante esta divertida odisea del desarrollo de software he trabajado con
-        gente increible, que me han enseñado a superarme y a mejorar como persona
+        gente increíble, que me han enseñado a superarme y a mejorar como persona
         y desarrollador.
         <br />
         <br />
         Actualmente me mantengo estudiando como avanza el desarrollo alrededor de
         React, pero siempre estoy dispuesto a aprender algo nuevo, como actualmente
-        estoy con el mundo del Backend y el desarrollo de aplicaciones mobiles con
-        codigo nativo
+        estoy con el mundo del Backend y el desarrollo de aplicaciones móviles con
+        código nativo.
       </p>
-      <p>Mi Stack de tecnologias son:</p>
+      <p>Mi Stack de tecnologías son:</p>
       <ul>
         <li class="blue"><i class="bx bxl-react"></i> React Native</li>
         <li class="gray"><i class="bx bx-mobile-alt"></i> Expo</li>
         <li class="blue"><i class="bx bxl-react"></i> React</li>
         <li class="gray"><i class="bx bxl-react"></i> Nextjs</li>
         <li class="purple"><i class="bx bxl-react"></i> Vite</li>
-        <li class="orange"><i class='bx bx-rocket' ></i> Astro</li>
+        <li class="orange"><i class="bx bx-rocket"></i> Astro</li>
         <li class="blue"><i class="bx bxl-react"></i> Zustand</li>
         <li class="purple"><i class="bx bxl-redux"></i> Redux</li>
+        <li class="pink"><i class='bx bx-book-heart'></i> Storybook</li>
+        <li class="blue"><i class='bx bx-test-tube'></i> Jest</li>
         <li class="blue"><i class="bx bxl-typescript"></i> Typescript</li>
         <li class="blue"><i class="bx bxl-tailwind-css"></i> Tailwind</li>
+        <li class="purple"><i class="bx bxl-bootstrap"></i> Bootstrap</li>
         <li class="blue"><i class="bx bxs-component"></i> Material UI</li>
         <li class="orange"><i class="bx bxl-firebase"></i> Firebase</li>
         <li class="purple"><i class="bx bxl-graphql"></i> GraphQL</li>
@@ -70,6 +73,9 @@
   }
   .purple:hover {
     color: #7e57c2;
+  }
+  .pink:hover {
+    color: #fa709a;
   }
   .gray:hover {
     color: #bdbdbd;
