--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -11,8 +11,8 @@
         class="bx bx-mobile-alt"></i>
     </h1>
     <p class="resume">
-      Me gusta desarrollar productos y programas que los usuarios puedan
-      interactuar, el código es una herramienta para llegar a la meta
+      Me gusta desarrollar productos y programas en el que los usuarios puedan
+      interactuar, el código es una herramienta para llegar a la meta.
     </p>
   </div>
 </main>
