update 99min status

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,7 +6,7 @@ const works = [
     color: "#85c440",
     company: "99minutos",
     photo: "./images/works/99min.png",
-    time: "Nov 2022 - Actual",
+    time: "Nov 2022 - Mar 2023",
     work: "Software Engineer",
     icons: ["bxl-react", "bx-server", "bx-check-shield", "bxl-typescript"],
   },
