--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,7 +57,7 @@ const { title } = Astro.props;
 
   .stars {
     z-index: -1;
-    background: #000 url("https://i.imgur.com/YKY28eT.png") repeat top;
+    background: #000 url("/images/stars.png") repeat top;
 	animation: move-twink-back 1000s linear infinite;
   }
 
