--- a/src/components/Readme.astro
+++ b/src/components/Readme.astro
@@ -29,7 +29,7 @@
         <li class="blue"><i class="bx bxl-react"></i> Zustand</li>
         <li class="purple"><i class="bx bxl-redux"></i> Redux</li>
         <li class="pink"><i class='bx bx-book-heart'></i> Storybook</li>
-        <li class="blue"><i class='bx bx-test-tube'></i> Jest</li>
+        <li class="blue"><i class='bx bx-test-tube'></i> Vitest</li>
         <li class="blue"><i class="bx bxl-typescript"></i> Typescript</li>
         <li class="blue"><i class="bx bxl-tailwind-css"></i> Tailwind</li>
         <li class="purple"><i class="bx bxl-bootstrap"></i> Bootstrap</li>
