--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,16 +1,20 @@
 <main class="cover">
-  <img alt="avatar" src="./images/avatar.png" class="avatar" />
+  <img
+    alt="avatar"
+    src="./images/avatar.png"
+    class="avatar aspect-auto w-full h-72 md:w-1/3 md:h-auto object-contain"
+  />
   <div class="text">
-    <p class="frase">
+    <p class="font-bold text-lg -rotate-6">
       Hola, soy Damián y
       <br />
-      <span class="siglo">Programar es la magia del siglo XXI</span>
+      <span class="text-uva">Programar es la magia del siglo XXI</span>
     </p>
-    <h1>
+    <h1 class="font-bold text-3xl md:text-4xl my-5">
       Developer Frontend & Mobile <i class="bx bxl-react"></i><i
         class="bx bx-mobile-alt"></i>
     </h1>
-    <p class="resume">
+    <p class="text-lg">
       Me gusta desarrollar productos y programas en el que los usuarios puedan
       interactuar, el código es una herramienta para llegar a la meta.
     </p>
@@ -18,12 +22,7 @@
 </main>
 
 <style>
-  .siglo {
-    color: #a288ae;
-  }
   .avatar {
-    aspect-ratio: auto;
-    width: 30%;
     transform: translatey(0px);
     animation: float 5s ease-in-out infinite;
   }
@@ -33,21 +32,6 @@
     justify-content: center;
     align-items: center;
     gap: 5rem;
-  }
-
-  h1 {
-    font-size: 56px;
-    margin: 0;
-  }
-
-  .frase {
-    transform: rotate(-5deg);
-    font-size: large;
-    font-weight: bold;
-  }
-
-  .resume {
-    font-size: 22px;
   }
 
   .bxl-react {
@@ -80,19 +64,8 @@
   }
 
   @media only screen and (max-width: 800px) {
-    h1 {
-      font-size: 30px;
-    }
     .cover {
       display: block;
-    }
-    .avatar {
-      max-inline-size: 100%;
-      block-size: auto;
-      aspect-ratio: 2/1;
-      object-fit: contain;
-      width: 100%;
-      height: 40vh;
     }
     .cover {
       margin: 2rem 0 6rem;
