--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,16 +1,16 @@
-<main class="cover">
+<main class="md:grid grid-cols-2 md:my-10">
   <img
     alt="avatar"
     src="./images/avatar.png"
-    class="avatar aspect-auto w-full h-72 md:w-1/3 md:h-auto object-contain"
+    class="avatar aspect-auto w-full h-72 md:h-auto object-contain"
   />
-  <div class="text">
+  <div class="flex flex-col justify-center gap-4 md:gap-y-6">
     <p class="font-bold text-lg -rotate-6">
       Hola, soy Damián y
       <br />
       <span class="text-uva">Programar es la magia del siglo XXI</span>
     </p>
-    <h1 class="font-bold text-3xl md:text-4xl my-5">
+    <h1 class="font-bold text-3xl md:text-4xl">
       Developer Frontend & Mobile <i class="bx bxl-react"></i><i
         class="bx bx-mobile-alt"></i>
     </h1>
@@ -25,13 +25,6 @@
   .avatar {
     transform: translatey(0px);
     animation: float 5s ease-in-out infinite;
-  }
-  .cover {
-    margin: 10rem 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5rem;
   }
 
   .bxl-react {
@@ -64,9 +57,6 @@
   }
 
   @media only screen and (max-width: 800px) {
-    .cover {
-      display: block;
-    }
     .cover {
       margin: 2rem 0 6rem;
     }
