--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,13 @@
-<header>
-  <div class="flex">
+<header class="pt-4 px-4 md:px-0">
+  <div class="flex justify-between">
     <a href="/">
-      <h4>Damián</h4>
+      <h4 class="font-bold text-xl">Damián <span class="hidden md:inline">Huchín</span></h4>
     </a>
-    <ul class="flex list">
+    <ul class="hidden md:flex gap-12">
       <li><a href="/">Portafolio</a></li>
       <li><a href="/blog">Blog</a></li>
       <!-- <li><a href="/">Videos</a></li> -->
-      <ul class="social">
+      <ul class="flex gap-5">
         <li>
           <a href="https://twitter.com/DamianHuchin" target="_blank"
             ><i class="bx bxl-twitter"></i></a
@@ -25,15 +25,15 @@
         </li>
       </ul>
     </ul>
-    <i id="menu" class="bx bx-menu"></i>
+    <i id="menu" class="bx bx-menu md:hidden cursor-pointer text-2xl"></i>
   </div>
-  <div id="mini-menu" class="no-display">
-    <ul class="mini-list">
+  <div id="mini-menu" class="hidden md:hidden">
+    <ul class="mt-4 flex flex-col gap-4">
       <li><a href="/">Portafolio</a></li>
       <li><a href="/blog">Blog</a></li>
       <!-- <li><a href="/">Videos</a></li> -->
     </ul>
-    <ul class="social">
+    <ul class="flex justify-between text-2xl mt-4">
       <li>
         <a href="https://twitter.com/DamianHuchin" target="_blank"
           ><i class="bx bxl-twitter"></i></a
@@ -63,37 +63,19 @@
     const actualClass = divMenu.getAttribute("class") || "";
     divMenu.setAttribute(
       "class",
-      actualClass.includes("no-display")
-        ? actualClass.replace("no-display", "mini-list")
-        : actualClass.replace("mini-list", "no-display")
+      actualClass.includes("hidden")
+        ? actualClass.replace("hidden", "")
+        : actualClass.concat(" hidden")
     );
   };
 </script>
 
 <style>
-  header {
-    padding: 1rem 2rem;
-  }
-  h4 {
-    font-size: x-large;
-    margin: 0%;
-  }
   ul {
     list-style: none;
   }
-  li a {
-    padding: 0.5rem 1rem;
-    border-radius: 1rem;
-    font-size: large;
-  }
   li a:hover {
     text-decoration: underline #9f64b2 3px;
-  }
-  .flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
   }
   .social {
     display: flex;
@@ -113,49 +95,11 @@
   .bxl-linkedin-square:hover {
     color: #0a65c1;
   }
-  .bx-menu {
-    cursor: pointer;
-  }
 
   .mini-list,
   .no-display {
     height: 0px;
     transition: max-width 0.15s ease-out;
     overflow: hidden;
-  }
-
-  #menu {
-    display: none;
-  }
-
-  @media only screen and (max-width: 800px) {
-    .list {
-      display: none;
-    }
-    .bx-menu {
-      display: block;
-      font-size: xx-large;
-    }
-    .mini-list {
-      height: auto;
-    }
-    .social {
-      justify-content: space-between;
-    }
-    .mini-list {
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    a {
-      padding-left: 0;
-    }
-    i {
-      font-size: xx-large;
-    }
-    #menu {
-      display: inline;
-    }
   }
 </style>
