--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,4 +1,4 @@
-<main class="md:grid grid-cols-2 md:my-10">
+<main class="md:grid grid-cols-2 mb-16 md:my-10">
   <img
     alt="avatar"
     src="./images/avatar.png"
