--- a/src/components/WorkLabel.astro
+++ b/src/components/WorkLabel.astro
@@ -11,10 +11,10 @@ export interface Props {
 const { color, company, photo, time, work, icons } = Astro.props;
 ---
 
-<div class="worklabel">
-  <img src={photo} alt={`${company} logo`} />
-  <div>
-    <h3>{work}</h3>
+<div class="worklabel grid grid-cols-4 items-center">
+  <img src={photo} alt={`${company} logo`} class="w-5/6 md:w-3/4 rounded-full aspect-square object-cover"/>
+  <div class="col-span-3">
+    <h3 class="font-bold md:text-lg">{work}</h3>
     <p>{company} {time}</p>
     <p class="stack">
       {icons.map((icon) => <i class={`bx ${icon}`} />)}
@@ -23,11 +23,6 @@ const { color, company, photo, time, work, icons } = Astro.props;
 </div>
 
 <style define:vars={{ color }}>
-  h3 {
-    font-size: xx-large;
-    margin: 0;
-    transition: ease-out 200ms;
-  }
   p {
     margin: 0%;
     font-size: large;
@@ -35,18 +30,6 @@ const { color, company, photo, time, work, icons } = Astro.props;
 
   .worklabel:hover > div > h3 {
     color: var(--color);
-  }
-
-  .worklabel {
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: flex-start;
-    gap: 1rem;
-  }
-
-  img {
-    height: 5rem;
-    border-radius: 50%;
   }
 
   .stack {
@@ -61,9 +44,4 @@ const { color, company, photo, time, work, icons } = Astro.props;
     opacity: 1;
   }
 
-  @media only screen and (max-width: 800px) {
-    h3 {
-      font-size: x-large;
-    }
-  }
 </style>
