--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,50 +7,49 @@
       <li><a href="/">Portafolio</a></li>
       <li><a href="/blog">Blog</a></li>
       <!-- <li><a href="/">Videos</a></li> -->
-      <ul class="flex gap-5">
-        <li>
-          <a href="https://twitter.com/DamianHuchin" target="_blank"
-            ><i class="bx bxl-twitter"></i></a
-          >
-        </li>
-        <li>
-          <a href="https://github.com/Axoluchin" target="_blank"
-            ><i class="bx bxl-github"></i></a
-          >
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/damianhuchin/" target="_blank"
-            ><i class="bx bxl-linkedin-square"></i></a
-          >
-        </li>
-      </ul>
     </ul>
-    <i id="menu" class="bx bx-menu md:hidden cursor-pointer text-2xl"></i>
-  </div>
-  <div id="mini-menu" class="hidden md:hidden">
-    <ul class="mt-4 flex flex-col gap-4">
-      <li><a href="/">Portafolio</a></li>
-      <li><a href="/blog">Blog</a></li>
-      <!-- <li><a href="/">Videos</a></li> -->
-    </ul>
-    <ul class="flex justify-between text-2xl mt-4">
+    <ul class="hidden md:flex gap-5">
       <li>
-        <a href="https://twitter.com/DamianHuchin" target="_blank"
+        <a href="https://twitter.com/DamianHuchin" target="_blank" aria-label="Twitter de Damián"
           ><i class="bx bxl-twitter"></i></a
         >
       </li>
       <li>
-        <a href="https://github.com/Axoluchin" target="_blank"
+        <a href="https://github.com/Axoluchin" target="_blank" aria-label="Github de Damián"
           ><i class="bx bxl-github"></i></a
         >
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/damianhuchin/" target="_blank"
+        <a href="https://www.linkedin.com/in/damianhuchin/" target="_blank" aria-label="LinkedIn de Damián"
           ><i class="bx bxl-linkedin-square"></i></a
         >
       </li>
     </ul>
+    <i id="menu" class="bx bx-menu md:hidden cursor-pointer text-2xl"></i>
   </div>
+  <nav id="mini-menu" class="hidden md:hidden">
+    <ul class="mt-4 flex flex-col gap-4">
+      <li><a href="/">Portafolio</a></li>
+      <li><a href="/blog">Blog</a></li>
+    </ul>
+    <ul class="flex justify-between text-2xl mt-4">
+      <li>
+        <a href="https://twitter.com/DamianHuchin" target="_blank" aria-label="Twitter de Damián"
+          ><i class="bx bxl-twitter"></i></a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/Axoluchin" target="_blank" aria-label="Github de Damián"
+          ><i class="bx bxl-github"></i></a
+        >
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/damianhuchin/" target="_blank" aria-label="LinkedIn de Damián"
+          ><i class="bx bxl-linkedin-square"></i></a
+        >
+      </li>
+    </ul>
+  </nav>
 </header>
 
 <script>
