--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <meta name="generator" content={Astro.generator} />
+    <meta name="description" content="Desarrollador Frontend y Mobile, experimentado con Nextjs, Expo, Typescript, React y React Native, ">
     <title>{`${title} | Axoluchin`}</title>
   </head>
   <body>
