--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,7 +1,12 @@
+---
+import { Image } from "astro:assets";
+import Avatar from "../../public/images/avatar.webp"
+---
+
 <main class="md:grid grid-cols-2 mb-16 md:my-10">
-  <img
+  <Image
     alt="avatar"
-    src="./images/avatar.png"
+    src={Avatar}
     class="avatar aspect-auto w-full h-72 md:h-auto object-contain"
   />
   <div class="flex flex-col justify-center gap-4 md:gap-y-6">
