--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,9 @@
-<header class="pt-4 px-4 md:px-0">
+<header class="py-4 px-4 md:px-0 backdrop-blur-md sticky top-0 z-20">
   <div class="flex justify-between">
     <a href="/">
-      <h4 class="font-bold text-xl">Damián <span class="hidden md:inline">Huchín</span></h4>
+      <h4 class="font-bold text-xl">
+        Damián <span class="hidden md:inline">Huchín</span>
+      </h4>
     </a>
     <ul class="hidden md:flex gap-12">
       <li><a href="/">Portafolio</a></li>
@@ -10,17 +12,24 @@
     </ul>
     <ul class="hidden md:flex gap-5">
       <li>
-        <a href="https://twitter.com/DamianHuchin" target="_blank" aria-label="Twitter de Damián"
-          ><i class="bx bxl-twitter"></i></a
+        <a
+          href="https://twitter.com/DamianHuchin"
+          target="_blank"
+          aria-label="Twitter de Damián"><i class="bx bxl-twitter"></i></a
         >
       </li>
       <li>
-        <a href="https://github.com/Axoluchin" target="_blank" aria-label="Github de Damián"
-          ><i class="bx bxl-github"></i></a
+        <a
+          href="https://github.com/Axoluchin"
+          target="_blank"
+          aria-label="Github de Damián"><i class="bx bxl-github"></i></a
         >
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/damianhuchin/" target="_blank" aria-label="LinkedIn de Damián"
+        <a
+          href="https://www.linkedin.com/in/damianhuchin/"
+          target="_blank"
+          aria-label="LinkedIn de Damián"
           ><i class="bx bxl-linkedin-square"></i></a
         >
       </li>
@@ -34,17 +43,24 @@
     </ul>
     <ul class="flex justify-between text-2xl mt-4">
       <li>
-        <a href="https://twitter.com/DamianHuchin" target="_blank" aria-label="Twitter de Damián"
-          ><i class="bx bxl-twitter"></i></a
+        <a
+          href="https://twitter.com/DamianHuchin"
+          target="_blank"
+          aria-label="Twitter de Damián"><i class="bx bxl-twitter"></i></a
         >
       </li>
       <li>
-        <a href="https://github.com/Axoluchin" target="_blank" aria-label="Github de Damián"
-          ><i class="bx bxl-github"></i></a
+        <a
+          href="https://github.com/Axoluchin"
+          target="_blank"
+          aria-label="Github de Damián"><i class="bx bxl-github"></i></a
         >
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/damianhuchin/" target="_blank" aria-label="LinkedIn de Damián"
+        <a
+          href="https://www.linkedin.com/in/damianhuchin/"
+          target="_blank"
+          aria-label="LinkedIn de Damián"
           ><i class="bx bxl-linkedin-square"></i></a
         >
       </li>
