--- a/src/components/Readme.astro
+++ b/src/components/Readme.astro
@@ -2,7 +2,7 @@
   <h2 class="text-3xl font-bold md:text-5xl mb-8"># README.md 📄</h2>
   <div class="md:grid grid-cols-3">
     <div class="col-span-2">
-      <p class="md:text-justify text-base md:text-lg mb-4">
+      <p class="text-base md:text-lg mb-4">
         Empecé desarrollando Apps con Javascript en React Native y Expo, en
         cuestión de meses cambie a Typescript para mejorar la calidad de código
         y de los proyectos, después dando el salto a React con sus Frameworks
@@ -28,15 +28,18 @@
         <li class="orange"><i class="bx bx-rocket"></i> Astro</li>
         <li class="blue"><i class="bx bxl-react"></i> Zustand</li>
         <li class="purple"><i class="bx bxl-redux"></i> Redux</li>
-        <li class="pink"><i class='bx bx-book-heart'></i> Storybook</li>
-        <li class="blue"><i class='bx bx-test-tube'></i> Vitest</li>
+        <li class="pink"><i class="bx bx-book-heart"></i> Storybook</li>
+        <li class="blue"><i class="bx bx-test-tube"></i> Vitest</li>
         <li class="blue"><i class="bx bxl-typescript"></i> Typescript</li>
         <li class="blue"><i class="bx bxl-tailwind-css"></i> Tailwind</li>
         <li class="purple"><i class="bx bxl-bootstrap"></i> Bootstrap</li>
         <li class="blue"><i class="bx bxs-component"></i> Material UI</li>
+        <li class="blue"><i class="bx bx-globe"></i> Next-intl (i18)</li>
+        <li class="blue"><i class="bx bxs-component"></i> Shadcn</li>
         <li class="orange"><i class="bx bxl-firebase"></i> Firebase</li>
         <li class="purple"><i class="bx bxl-graphql"></i> GraphQL</li>
         <li class="gray"><i class="bx bx-check-shield"></i> Auth0</li>
+        <li class="gray"><i class="bx bxl-github"></i> Github Actions</li>
         <li class="orange"><i class="bx bx-server"></i> Nestjs</li>
       </ul>
     </div>
