--- a/src/components/WorkLabel.astro
+++ b/src/components/WorkLabel.astro
@@ -6,42 +6,36 @@ export interface Props {
   photo: string;
   color: string;
   icons: string[];
+  desc: string;
 }
 
-const { color, company, photo, time, work, icons } = Astro.props;
+const { color, company, photo, time, work, icons, desc } = Astro.props;
 ---
 
-<div class="worklabel grid grid-cols-4 items-center">
-  <img src={photo} alt={`${company} logo`} class="w-5/6 md:w-3/4 rounded-full aspect-square object-cover"/>
-  <div class="col-span-3">
-    <h3 class="font-bold md:text-lg">{work}</h3>
-    <p>{company} {time}</p>
-    <p class="stack">
-      {icons.map((icon) => <i class={`bx ${icon}`} />)}
-    </p>
+<li class="mb-10 ms-4">
+  <div
+    class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
+  >
   </div>
-</div>
-
-<style define:vars={{ color }}>
-  p {
-    margin: 0%;
-    font-size: large;
-  }
-
-  .worklabel:hover > div > h3 {
-    color: var(--color);
-  }
-
-  .stack {
-    opacity: 0;
-    transition: ease-out 200ms;
-    margin-top: 8px;
-    display: flex;
-    gap: 6px;
-  }
-
-  .worklabel:hover > div > .stack {
-    opacity: 1;
-  }
-
-</style>
+  <time class="mb-1 text-sm font-normal leading-none text-gray-100">
+    {time}
+  </time>
+  <div class="flex gap-4 my-4">
+    <img
+      src={photo}
+      alt={`${company} logo`}
+      class="h-8 rounded-full aspect-square object-cover"
+    />
+    <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+      {company}
+      <span class="font-normal text-sm">{work}</span>
+    </h3>
+  </div>
+  <div class="worklabel grid grid-cols-4 items-center">
+    <div class="col-span-3">
+      <p>
+        {desc}
+      </p>
+    </div>
+  </div>
+</li>
